fix: add route configuration to init client
